# MyMalloc

./: CMakeLists.txt  main.c
lib/: CMakeLists.txt  myMalloc.c  myMalloc.h  sbrk_stubs.c  sbrk_stubs.h
tests/: CMakeLists.txt  myMalloc.c  myMalloc.h  realloctest.c  test.cpp
